filter and sort on Lead, case
Former-commit-id: 9c4046c1b5bcd3143e0ca16cc9f5f2b3c43379c0 [formerly f77ec21dd26829443c7ba4322cbbbe7538cb1379] [formerly 4b95f5f33465379b02a53fa2f61978169d041385 [formerly 48150cce144c91070da7ac6d6d6ada36e480a210]]
Former-commit-id: 6a5f392d6f819c9073b871e1065a60540b63aa77 [formerly 9789769ced2ecc6abb7a3b58a9d9ed54daa85076]
Former-commit-id: 8279f855824f9c4977c00b2e50c3d01c6b8483f0

--- a/index.yaml
+++ b/index.yaml
@@ -130,6 +130,27 @@ indexes:
 - kind: Case
   properties:
   - name: organization
+  - name: contact_name
+
+- kind: Case
+  properties:
+  - name: organization
+  - name: name
+
+- kind: Case
+  properties:
+  - name: organization
+  - name: priority
+    direction: desc
+
+- kind: Case
+  properties:
+  - name: organization
+  - name: status
+
+- kind: Case
+  properties:
+  - name: organization
   - name: updated_at
     direction: desc
 
