Finishing filtering and sorting
Former-commit-id: 97655e7556692b42c0439b5a7a10d630f75224dc [formerly 83248f358a2a1b2d973b51d90cc5aebc2ee3608c] [formerly 57113b480f18b8bd1537dd297a4cb690cc474a4e [formerly fbe16943b852a39e6c2f1c16c54870720e869a1a]]
Former-commit-id: 735a274a09811ba2a91b7c294effd52039638818 [formerly 72b5a0c459f2959e5e2b72324ea680f2abecf90c]
Former-commit-id: e7589c9cd66bea66e112089272081fee339cfce4

--- a/index.yaml
+++ b/index.yaml
@@ -141,6 +141,11 @@ indexes:
   properties:
   - name: organization
   - name: priority
+
+- kind: Case
+  properties:
+  - name: organization
+  - name: priority
     direction: desc
 
 - kind: Case
