fixing some problems when inviting new users
Former-commit-id: 0575b8390caf7c3469c0fb42d6c98aef912d984d [formerly 4eab9e958db205a25e92735f994579a722621a43] [formerly 6674c2a038eb50718c137fd9e345febca013b0f5 [formerly 1fccfbf77433894dd34fd4c98aa3e8b4f6f7f8d3]]
Former-commit-id: f93a5c6365263f6e5557d31a72f86be90aefa6ec [formerly 07c2be62024bc08bca8c601d85fa33bf906ab9d3]
Former-commit-id: f184cf5063e3b5e47842bc9034a9436cdd5af4c7

--- a/app.yaml
+++ b/app.yaml
@@ -18,6 +18,8 @@ libraries:
 
 
 handlers:
+- url: /admin/.*
+  script: google.appengine.ext.admin.application
 - url: /static
   static_dir: static
 # Endpoints handler
