working on ioGrow blog platform
Former-commit-id: b1e048db0ef1e851df3f9595518123f865dea636 [formerly f2fe4103ed43fc97f7f3951659242a0e5f8d026f] [formerly cc0f1f244edaee7ed0580087d11352829e76bc81 [formerly 58a1eb253ddb556679efd43bf8802a862c8fff55]]
Former-commit-id: 89ef1c76c22092eff4c747d2b71c461d98bff3b5 [formerly 960f132a7b5f71a7277d6c6018a2387f36ab04a0]
Former-commit-id: d6058e7ba2c219a0b744cbf755d522f0d337173c

--- a/index.yaml
+++ b/index.yaml
@@ -381,6 +381,12 @@ indexes:
   - name: updated_at
     direction: desc
 
+- kind: Node
+  properties:
+  - name: kind
+  - name: updated_at
+    direction: desc
+
 - kind: Opportunity
   properties:
   - name: access
