clic Event on calendar , fix # 663
Former-commit-id: bfa0cf1ac53a444c0b803f811c0d1a247bf32d64 [formerly 828bc3442ae42a0e69c54d2cb691f548d54d1b2d] [formerly 3abdba7189afa3bda2b641cbb45a81b96b99d4aa [formerly e2a2ad3fcad8fd3f3d51dca09c608954dffaa2dd]]
Former-commit-id: 2e1109cdfa6b8d06136834653c0e99eb5a47af7b [formerly ba6835580592edfb70dc566ceaa412797a5611c4]
Former-commit-id: 4f399041fe6f0ad9afc4201c0a60fdec947f55e9

--- a/index.yaml
+++ b/index.yaml
@@ -341,6 +341,11 @@ indexes:
   - name: about_kind
   - name: starts_at
 
+- kind: Event
+  properties:
+  - name: organization
+  - name: starts_at
+
 - kind: Lead
   properties:
   - name: access
