--- a/app.yaml
+++ b/app.yaml
@@ -16,10 +16,13 @@ libraries:
 - name: ssl
   version: latest
 
+builtins:
+- remote_api: on
 
 handlers:
 - url: /admin/.*
   script: google.appengine.ext.admin.application
+  login: admin
 - url: /static
   static_dir: static
 # Endpoints handler
