--- a/index.yaml
+++ b/index.yaml
@@ -588,3 +588,8 @@ indexes:
   - name: comments
   - name: updated_at
     direction: desc
+
+- kind: User
+  properties:
+  - name: google_user_id
+  - name: google_display_name
