--- a/babel.cfg
+++ b/babel.cfg
@@ -2,7 +2,10 @@
 [python: **.py]
 # Extraction from Genshi HTML and text templates
 [jinja2: **/templates/**.html]
-ignore_tags = script,style
-include_attrs = alt title summary
+#ignore_tags = script,style
+#include_attrs = alt title summary
+# Extraction from JavaScript files
+#[javascript: **.js]
+#extract_messages = $._, jQuery._
 
 
