fix bugs on emails.send api
Former-commit-id: 93a5e850ec0e2c97eee855ac002a533832101448 [formerly cadd560e58d66f530477b88a156283f904ae41da] [formerly 3ea04135d6b57ce56a31f7055f6f4a1be2c59b5f [formerly 080075f1db5ebc6e810e494f798a9b313079c060]]
Former-commit-id: 1cb5fd61231f2dfb0393b55bb6fbc2c855727f64 [formerly e4d2cf5b50f22840cb9d0ffdcb79eb74c3161d3a]
Former-commit-id: 1b516c255d70e396c8b0620c7c84ac421864db8e

--- a/queue.yaml
+++ b/queue.yaml
@@ -3,3 +3,7 @@ queue:
   rate: 20/s
   bucket_size: 40
   max_concurrent_requests: 10
+- name: gmail-queue
+  rate: 20/s
+  bucket_size: 40
+  max_concurrent_requests: 10
