--- a/queue.yaml
+++ b/queue.yaml
@@ -3,15 +3,27 @@ queue:
   rate: 20/s
   bucket_size: 40
   max_concurrent_requests: 10
+  retry_parameters:
+    task_retry_limit: 5
+    task_age_limit: 2d
 - name: gmail-queue
   rate: 20/s
   bucket_size: 40
   max_concurrent_requests: 10
+  retry_parameters:
+    task_retry_limit: 5
+    task_age_limit: 2d
 - name: iogrow-events
   rate: 20/s
   bucket_size: 40
   max_concurrent_requests: 10
+  retry_parameters:
+    task_retry_limit: 5
+    task_age_limit: 2d
 - name: iogrow-tasks
   rate: 20/s
   bucket_size: 40
-  max_concurrent_requests: 10 
+  max_concurrent_requests: 10
+  retry_parameters:
+    task_retry_limit: 5
+    task_age_limit: 2d 
