before pull from iogrow
Former-commit-id: a5b4ae597a2bd70c1614d3bc08fa5b484f657ed7 [formerly d1c10150ff543a832355537f495329fc36360b4d] [formerly a07a47c45979064d7fc60577965233b02326cf0d [formerly 700e066be5d111f10d073f347c634e782cd03889]]
Former-commit-id: dccec89c3547317b2bbdb09029b646eb6653a8dd [formerly ac38868b5525c87c294d7235c2e2dd9df33d7e45]
Former-commit-id: 8c22305e3114d64d972d46dcaa7a7ea7c001afd5

--- a/index.yaml
+++ b/index.yaml
@@ -573,7 +573,23 @@ indexes:
 - kind: Task
   properties:
   - name: organization
+  - name: created_at
+
+- kind: Task
+  properties:
+  - name: organization
   - name: due
+
+- kind: Task
+  properties:
+  - name: organization
+  - name: due
+    direction: desc
+
+- kind: Task
+  properties:
+  - name: organization
+  - name: title
 
 - kind: Task
   properties:
