--- a/queue.yaml
+++ b/queue.yaml
@@ -22,3 +22,17 @@ queue:
   retry_parameters:
     task_retry_limit: 5  # number of times 
     task_age_limit: 60s # number of days
+- name: iogrow-low-event   # at least seven 5 times in two days.....and than boom desapears 
+  rate: 20/s
+  bucket_size: 40 # the queue use the algorithem token bucket
+  max_concurrent_requests: 10 # how many requests the queue can listen to !
+  retry_parameters:
+    task_retry_limit: 5  # number of times 
+    task_age_limit: 60s # number of days
+- name: iogrow-low-task   # at least seven 5 times in two days.....and than boom desapears 
+  rate: 20/s
+  bucket_size: 40 # the queue use the algorithem token bucket
+  max_concurrent_requests: 10 # how many requests the queue can listen to !
+  retry_parameters:
+    task_retry_limit: 5  # number of times 
+    task_age_limit: 60s # number of days
