--- a/index.yaml
+++ b/index.yaml
@@ -317,6 +317,13 @@ indexes:
 
 - kind: Edge
   properties:
+  - name: end_node
+  - name: kind
+  - name: updated_at
+    direction: desc
+
+- kind: Edge
+  properties:
   - name: kind
   - name: start_node
   - name: updated_at
@@ -525,6 +532,12 @@ indexes:
 - kind: Opportunity
   properties:
   - name: owner
+  - name: updated_at
+    direction: desc
+
+- kind: Opportunitystage
+  properties:
+  - name: name
   - name: updated_at
     direction: desc
 
