v1 of discovery get 15 best tweets of each topic and update each day , delete olds tweets each 4days fix #1204
Former-commit-id: b78a9e1ced735d8e93e389672277bf6a7e262cbf [formerly f47743709eba00b19f17f56b40ccf8a4d7cc9a33] [formerly b5dd243c6f445fe95b6fd8b705406f42ba2b2d6a [formerly 914e98bb94b422d490b4ca05cdde69e047905640]]
Former-commit-id: ad8d525c195556aa00a2cfc1fa414f5415579c8f [formerly cc8a40a1caf038b5169850a7c306e416fe8bf6ec]
Former-commit-id: 92da74607200fe32012a4caa6b3dc345622a595e

--- a/cron.yaml
+++ b/cron.yaml
@@ -1,7 +1,7 @@
 cron:
-#- description: update tweets
-#  url: /path/to/cron/update_tweets
-#  schedule: every 120 minutes
+- description: update tweets
+  url: /path/to/cron/update_tweets
+  schedule: every 24 hours
 - description: delete tweets 
   url: /path/to/cron/delete_tweets
   schedule: every 100 hours
