new event button
Former-commit-id: ffb6f24a594eabfe6aa60c71f59f1a5e1cc6b2cd [formerly 75937bd175895949c4136335c46d12be6168ee0d] [formerly cc22eca94026d121666541261348183710507b0f [formerly bf35bb974dade329cdc82a3c3b47191528612bc3]]
Former-commit-id: c0f279b4c9e0478116bd9e7790595355c94bf302 [formerly ea36f8c80c89ae8fcea663cd8605002c8df0ddcc]
Former-commit-id: b0b7329582537559772401d5a4f3d4716f57d0da

--- a/static/plugins/Wookmark-jQuery-master/bower.json
+++ b/static/plugins/Wookmark-jQuery-master/bower.json
@@ -9,6 +9,7 @@
     "**/*.txt"
   ],
   "dependencies": {
-    "jQuery": ">=1.5.3"
+    "jQuery": ">=1.5.3",
+    "angular-bootstrap-datetimepicker": "latest"
   }
 }
