add mapreduce api in to iogrow
Former-commit-id: 6463be90f36ee2ed0907c75518cb26b371d08381 [formerly 848dbcc93bb6a0d035eb8987320d753fd95a0ef4] [formerly e63add37f61f01339af9a5cdec5f519184c14c0a [formerly b0489e84b2c3075c99897bcfd89f840cbf4aaedb]]
Former-commit-id: 9a700c43471ca092984bd85d597334188827b74b [formerly dbfc0c3407f89f54bf5eec6f631c6c36b5a24efb]
Former-commit-id: b7f07386a042368263ed29f7f3cea5391fa3053d

--- a/app.yaml
+++ b/app.yaml
@@ -18,7 +18,8 @@ libraries:
 
 builtins:
 - remote_api: on
-
+includes:
+- mapreduce/include.yaml
 handlers:
 - url: /admin/.*
   script: google.appengine.ext.admin.application
@@ -34,3 +35,6 @@ handlers:
   login: admin
 - url: /.*
   script: handlers.app
+- url: /_ah/pipeline.*
+  script: mapreduce.lib.pipeline.handlers._APP
+  login: admin
