--- a/index.yaml
+++ b/index.yaml
@@ -644,3 +644,15 @@ indexes:
   properties:
   - name: google_user_id
   - name: google_display_name
+
+- kind: _AE_Pipeline_Record
+  properties:
+  - name: class_path
+  - name: start_time
+    direction: desc
+
+- kind: _AE_Pipeline_Record
+  properties:
+  - name: is_root_pipeline
+  - name: start_time
+    direction: desc
