Edit Update existing user with option true to is_admin (Map reduce) #1357
Former-commit-id: eba311ceabbbcdccf2af7de9d2f66c78f1784f9a [formerly b15941738636cfb4bd0e23c978e7ada3c009de34] [formerly 4033b2c811e085755fdff50e9b6ff59933b28f85 [formerly 09f801b166a33a96f56fef15fce7992c79304682]]
Former-commit-id: 1af2b787585b9e2907d68a0a16ed1735a22b0b63 [formerly fedbcad74ee704423657eda830d798e36440d0e6]
Former-commit-id: 255f272e729fd461edd7bb651198227dd1f0eed1

--- a/mapreduce.yaml
+++ b/mapreduce.yaml
@@ -9,14 +9,21 @@ mapreduce:
 - name: parcour of lead
   mapper:
     input_reader: mapreduce.input_readers.DatastoreInputReader
-    handler: myModel.touch
+    handler: myModel.is_admin
     params:
     - name: entity_kind
       default: iomodels.crmengine.leads.Lead
-- name: parcour of users
+- name: put is admin option to users 
   mapper:
     input_reader: mapreduce.input_readers.DatastoreInputReader
-    handler: myModel.touch
+    handler: myModel.is_admin
     params:
     - name: entity_kind
       default: model.User
+- name: delete group tab
+  mapper:
+    input_reader: mapreduce.input_readers.DatastoreInputReader
+    handler: myModel.delete_group_tab
+    params:
+    - name: entity_kind
+      default: model.Tab
