delete groups tab
Former-commit-id: 51844ad29c830dc55f0154fd67cf0da286e0cdc8 [formerly 1a285f5a1172b82a9a4f0228a7fae8f9a8112c05] [formerly f43049005b72be362fbebd6c1ca36c9c6d01de53 [formerly b681dccc01e1df48af43940cc9f27f436b4effd5]]
Former-commit-id: e43c6945b82a96887cb8d4457f0c87a16b30c960 [formerly 99ee05770e856485f300db57ac7686e1ce01e498]
Former-commit-id: 88f61d2dbc49752107cec2e3db44518c7aacd6b2

--- a/mapreduce.yaml
+++ b/mapreduce.yaml
@@ -26,4 +26,4 @@ mapreduce:
     handler: myModel.delete_group_tab
     params:
     - name: entity_kind
-      default: model.Tab
+      default: model.Application
