Script Add Dashboard Tab On All Organization , fix #1438
Former-commit-id: d741a35e46d2ef6f78b375a53f9d24b4a04b8d6f [formerly e70dab7e92a38a852f993b371a6f7e6b1f620cfa] [formerly 9f097c035f2d544d617788b1b920904fe2504f93 [formerly 5d5d1f97bc380cbae2e1f2b8c53b09add324882d]]
Former-commit-id: 5cb31dae58ef7f44ac3e67d33cf69f867929eb99 [formerly 3411084818ccc28ee460ab777fe679919802d0a0]
Former-commit-id: 205bd6cb074a5b4c2c141680447a9f022d3ce69b

--- a/mapreduce.yaml
+++ b/mapreduce.yaml
@@ -27,3 +27,10 @@ mapreduce:
     params:
     - name: entity_kind
       default: model.Application
+- name: add dashboard tab
+  mapper:
+    input_reader: mapreduce.input_readers.DatastoreInputReader
+    handler: myModel.add_dashboard_tab
+    params:
+    - name: entity_kind
+      default: model.Application
