delete groupe tab from iogrow company , delete groups tab from tabs table , update add dashboard script so the dashboard cab only added once .
Former-commit-id: 587f98dfaf3abeed305989db86e7c8c98db6559f [formerly 1b44a2b0bc8f1b4535a8727ce94dcf956b514362] [formerly 77a056269b4eca910da59f7b62626fc6add525f8 [formerly d987fb0b029ef60ff8a686a0a22e2fa42c420cd5]]
Former-commit-id: a103a72f438c8a824f3d2acd27944583fa67b9a5 [formerly cdf3ba74d517b4e07804dfb2382ddc72308413e6]
Former-commit-id: 0cf6af3255fa7d2f406a5832c6de38b987a88d67

--- a/mapreduce.yaml
+++ b/mapreduce.yaml
@@ -34,3 +34,19 @@ mapreduce:
     params:
     - name: entity_kind
       default: model.Application
+- name: delete grouops tab from tabs table
+  mapper:
+    input_reader: mapreduce.input_readers.DatastoreInputReader
+    handler: myModel.delete_tab_group_from_datastore
+    params:
+    - name: entity_kind
+      default: model.Tab
+- name: delete groups tab from iogrow company
+  mapper:
+    input_reader: mapreduce.input_readers.DatastoreInputReader
+    handler: myModel.delete_iogrow_groups_tab
+    params:
+    - name: entity_kind
+      default: model.Application
+    - name: organization_key
+      default:
