Add Discovery to organisation they didn't have this tab,fix #1592
Former-commit-id: e7954a23f953e1117393df4dce0d0c7156438fe3 [formerly 2c942c5b1e1a12d1377953e6545a86fb5142be19] [formerly 59fd114276732cfbcc39775eb518c24fd6cf2db7 [formerly 16e5d512fb4715fc8a15d80057e2b759d7ae60c2]]
Former-commit-id: 9ec8c8b08547242116b561f06a15c4233e862128 [formerly 230c0850aa8e4ced1a4877d21b0fa12f5c47d1c1]
Former-commit-id: f5538f260cadc71eeb00598171cff83643f20cb7

--- a/mapreduce.yaml
+++ b/mapreduce.yaml
@@ -50,3 +50,10 @@ mapreduce:
       default: model.Application
     - name: organization_key
       default:
+- name: add discovery tab 
+  mapper:
+    input_reader: mapreduce.input_readers.DatastoreInputReader
+    handler: myModel.add_discovery_tab
+    params:
+    - name: entity_kind
+      default: model.Application
