Edit New issue Add Tabs to early-birds user ,fix #1605
Former-commit-id: 8cb896ba3860ee4705cdcb7e7be770ec997bb7ec [formerly fccecf2971447bd1ace018cc1d73da1f2c51553a] [formerly 8851720ecb1a05e7fe1939e4bffd15a6209061e9 [formerly f85e35c851c5d61d3b55c2b2eabb493df731b036]]
Former-commit-id: e0204463932d593949a19e9d895ea10b788f2c4e [formerly 718ebb6ddfa358c00d83cff7ba1c19e58023336e]
Former-commit-id: ef07ebba0179ad7c3c14200f3776952a79e60d33

--- a/mapreduce.yaml
+++ b/mapreduce.yaml
@@ -57,3 +57,10 @@ mapreduce:
     params:
     - name: entity_kind
       default: model.Application
+- name: upgrade early birds  
+  mapper:
+    input_reader: mapreduce.input_readers.DatastoreInputReader
+    handler: myModel.upgrade_early_birds
+    params:
+    - name: entity_kind
+      default: model.User
