script to delete unused tabs after upgrading early birds
Former-commit-id: 07285347b4ddb453db9e856295062e626a90b359 [formerly 38f5787797944964fb3eed048a37bdc4395b4c3b] [formerly 1f207cf50a6601d4d91b91b09fbc104470f8413f [formerly 3e3974e69d023bb1ac473bea3e3f85731d3f0873]]
Former-commit-id: 3a4446294e8eff2180c39d070bc86b7ece25e494 [formerly 299875c6eec29c7304551c624808bc06451b8119]
Former-commit-id: 62881d47c495949ae6efa42576965ba198afff4b

--- a/mapreduce.yaml
+++ b/mapreduce.yaml
@@ -78,3 +78,10 @@ mapreduce:
     params:
     - name: entity_kind
       default: model.Tab
+- name: delete unused tabs   
+  mapper:
+    input_reader: mapreduce.input_readers.DatastoreInputReader
+    handler: myModel.delete_unused_tabs
+    params:
+    - name: entity_kind
+      default: model.Organization
