reorganize iorgow tabs
Former-commit-id: ed7d2f5c850e0979dfaa568009cdf06538f798b9 [formerly db4a4004dbed5260af419a61b5ebde39debb38d3] [formerly edf29e267a6c3764c77fad2d6bcdad219fc0fcf9 [formerly 617da5a5ea17735ca50e8e66253d4ede21393692]]
Former-commit-id: d7629ad70b4796a10526a3cd6d1397e2cfdc6344 [formerly fb439e869a1db6c7274348f9a02744bfc1fb45cc]
Former-commit-id: b1ae4d000cdd13f20efdd9898efd72340ac6a903

--- a/mapreduce.yaml
+++ b/mapreduce.yaml
@@ -92,3 +92,17 @@ mapreduce:
     params:
     - name: entity_kind
       default: model.Application
+- name: create_new_tabs
+  mapper:
+    input_reader: mapreduce.input_readers.DatastoreInputReader
+    handler: myModel.create_new_tabs
+    params:
+    - name: entity_kind
+      default: model.Application
+- name: delete_old_tabs
+  mapper:
+    input_reader: mapreduce.input_readers.DatastoreInputReader
+    handler: myModel.delete_old_tabs
+    params:
+    - name: entity_kind
+      default: model.Application
