know who are the organizations without plans
Former-commit-id: 7d8afb4ca68883639f57bfc78d5ec7874e20b2e5 [formerly dd0c49f680266b81a001b3237a0d6f1722da90e2] [formerly 52c1168d0d78547a487f66c6bebdb1f5e18df0f6 [formerly 3bb250faf47e216b3415219281a229e040ce8b44]]
Former-commit-id: d57b0e303b515da1be3851f219764c6f7bc83a40 [formerly 88c6593b8dc3e5372a292fb5f7e7da208fd54fb1]
Former-commit-id: 54cf062413f3651a47b08352e23bc54807b54661

--- a/mapreduce.yaml
+++ b/mapreduce.yaml
@@ -106,3 +106,10 @@ mapreduce:
     params:
     - name: entity_kind
       default: model.Application
+- name: add_billing_infos_to_oganizations
+  mapper:
+    input_reader: mapreduce.input_readers.DatastoreInputReader
+    handler: myModel.add_billing_infos_to_oganizations
+    params:
+    - name: entity_kind
+      default: model.Organization
