--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "CRM for Startups",
   "main": "handlers.py",
   "dependencies": {
-    "stripe": "^2.8.0"
+    "stripe": "^2.8.0",
+    "lodash": "~3.6.0"
   },
   "devDependencies": {
     "grunt-contrib-concat": "^0.5.1",
