testing salesforce apis
Former-commit-id: fc91feaf36533c71cc5ed5a900acaf9b3ee53991 [formerly a94fa8d07921a4a1fea9c3646dc137d02265b936] [formerly 73cf36e20ead423d0114e9fba0e2bc7e36f630bc [formerly 24be8c8f1033279e2f4bd60ecef9cdd955718d40]]
Former-commit-id: a0c1c95d36f24bdedc0345e1ac712fe7259700dc [formerly 8836c540270219b38481b86b6e442e99ad9b8dec]
Former-commit-id: e9114d2a2b53e856761b5977b537f579feed39d6

--- a/app.yaml
+++ b/app.yaml
@@ -26,6 +26,11 @@ handlers:
   login: admin
 - url: /static
   static_dir: static
+
+- url: /static/new_web_site/google_drive_files
+  static_dir: static/new_web_site/google_drive_files
+  expiration: "30d"
+
 # Endpoints handler
 - url: /_ah/spi/.*
   script: services.application
