--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *~
 *.py[cod]
+node_modules/*
 
 # C extensions
 *.so
@@ -34,4 +35,4 @@ nosetests.xml
 .mr.developer.cfg
 .project
 .pydevproject
->>>>>>> 074795d4b2ba033c03ec00e86fa0f481275c16c5
+
