initialize gmailiogrow lead  synch to 1
Former-commit-id: 473fd2fe017676139523352c3326752d1ec3892a [formerly 1b1cb9ade2a359c0e19eab325152d455875f8f45] [formerly 24203ad1fd9d89d5e630bbe1043d1505f790f7e6 [formerly 053600af9a1e1769bc1c209d5d58a961fa24b2e4]]
Former-commit-id: 518bb0d3a7f36b604686e74f70651a664e883f14 [formerly 6bb09aababd55cd4a353c7fad25bf96f2e9bfa61]
Former-commit-id: 4182528f7d0d2e05437f45092df23d7aa79e8bb0

--- a/mapreduce.yaml
+++ b/mapreduce.yaml
@@ -113,3 +113,10 @@ mapreduce:
     params:
     - name: entity_kind
       default: model.Organization
+- name: initialize_gmail_sync_with_lead
+  mapper:
+    input_reader: mapreduce.input_readers.DatastoreInputReader
+    handler: myModel.initialize_gmail_sync_with_lead
+    params:
+    - name: entity_kind
+      default: model.User 
