fix all bugs asignedd to me in github
Former-commit-id: d18eb3f4bcbdf94f5c5d1c5c86685e732fb429d1 [formerly 30e5ba0cb514c587538c6f124829a2397c9d89d6] [formerly f1ed5255f451308d4d4887a20ae75b3d9841b122 [formerly ab2db756f088e88b489265deceb76d8a9ecded07]]
Former-commit-id: a0c11fcfca781ae770914f7b10360749b6241d57 [formerly 9e851593b8c0f65e25892c5c3a7fceb4de05263b]
Former-commit-id: 07865abd2dbc7ecbfc392ec4ed367a23adc72699

--- a/index.yaml
+++ b/index.yaml
@@ -552,6 +552,11 @@ indexes:
   - name: probability
     direction: desc
 
+- kind: Opportunitystage
+  properties:
+  - name: organization
+  - name: stage_number
+
 - kind: Show
   properties:
   - name: access
