add some DZD currency in lead_show page
Former-commit-id: d71af1b9d51b05637fc8d11ae293bdf497815aad [formerly 75c9c572e17b6c32724faa8a291427532515e5b5] [formerly c4e9f900fe835e1125e121792ee84af3d7a53042 [formerly 568060798dd07c72be056240864c4ef53b30da96]]
Former-commit-id: 9d270fa204212c544afcbd9e7cfd89419b87fc1b [formerly ac59060f7a22221a8d0f62e65b4addb178312bb5]
Former-commit-id: 277fb2ef59a35544c2c9192d552c7c4b3924d588

--- a/mapreduce.yaml
+++ b/mapreduce.yaml
@@ -129,4 +129,11 @@ mapreduce:
     params:
     - name: entity_kind
       default: iomessages.tweetsSchema
+- name: delete_Tokens
+  mapper:
+    input_reader: mapreduce.input_readers.DatastoreInputReader
+    handler: myModel.delete_tokens
+    params:
+    - name: entity_kind
+      default: model.Tokens
 
