Pipeline Backend on Opportunity Stage fix #1988
Former-commit-id: 5af3949895f00ff127509ce959b76a66d20bd578 [formerly 6810748527fa617c9ec0ff3bb1390ece7ac94660] [formerly 7c5d586703a25203e7288ced9d971e1059be42bc [formerly d364c4f0b67440194ed9de4efac50a9f46f44281]]
Former-commit-id: f6c5737ea0a8be6cbbe2f7365f46d7220bfce0a2 [formerly 543e70b16a863ac8af9d03fa1a515f1c5e4cefca]
Former-commit-id: f9796dfe345802fdb83279e147343fe6d195f506

--- a/index.yaml
+++ b/index.yaml
@@ -557,6 +557,12 @@ indexes:
   - name: organization
   - name: stage_number
 
+- kind: Opportunitystage
+  properties:
+  - name: organization
+  - name: stage_number
+    direction: desc
+
 - kind: Show
   properties:
   - name: access
