Delete Dashboard Tab
Former-commit-id: 6e6732998c14d18fdc9c3213623ac131a499e842 [formerly ec9aee01d144c8f815107ce41561e415d93e6178] [formerly bd03aa2f9c5533a35d464fa0bacfd943c3cdf264 [formerly 21841328af10ace0b9ef01e69655f1a81253771c]]
Former-commit-id: 9e99cbb21a1f378c28f5f441dca5ce342264ebfb [formerly 4aa67690fb5b7f349a14653b92e5b997953bd2d8]
Former-commit-id: 9aac802775c0f3548545e8a457dc8403c825f2ce

--- a/mapreduce.yaml
+++ b/mapreduce.yaml
@@ -144,3 +144,10 @@ mapreduce:
     - name: entity_kind
       default: model.User
 
+- name: delete dashboard_tab
+  mapper:
+    input_reader: mapreduce.input_readers.DatastoreInputReader
+    handler: myModel.delete_dashboad_tab
+    params:
+    - name: entity_kind
+      default: model.Application
