--- a/index.yaml
+++ b/index.yaml
@@ -668,3 +668,9 @@ indexes:
   - name: is_root_pipeline
   - name: start_time
     direction: desc
+
+- kind: OppTimeline
+  properties:
+  - name: opportunity
+  - name: created_at
+    direction: desc
