--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "CRM for Startups",
   "main": "handlers.py",
   "dependencies": {
-    "stripe": "^2.8.0",
+    "express": "^4.13.3",
+    "gcloud": "^0.20.0",
+    "googleapis": "^2.1.3",
     "lodash": "~3.6.0",
-    "psi": "~1.0.6"
+    "psi": "~1.0.6",
+    "stripe": "^2.8.0"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
