--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.13.3",
     "gcloud": "^0.20.0",
     "googleapis": "^2.1.3",
+    "grunt": "^0.4.5",
     "lodash": "~3.6.0",
     "psi": "~1.0.6",
     "stripe": "^2.8.0"
