--- a/index.yaml
+++ b/index.yaml
@@ -9,7 +9,10 @@ indexes:
 # manually, move them above the marker line.  The index.yaml file is
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
-
+- kind: ProxyServer
+  properties:
+  - name: status
+  - name: last_request
 - kind: Account
   properties:
   - name: access
