fixing customfield reorder
Former-commit-id: 6b23d7d472b8b1446f10ddc0bd5f14d6db1314f1 [formerly cb061d7a003023fe5de8a0a03991239ce8e20556] [formerly 967925ce68ee8161f05d6c1941bf692af2f76180 [formerly f92db649d078f7f2c8c1ad7232a617679e40e021]]
Former-commit-id: 1a0add37bbe555235adbe458ada3fea6d3b018fd [formerly b28fd07bac27e3c33b10b86036e5aa0aa24d9439]
Former-commit-id: b8319dbd613ac7cc56812b506bf3a4fc5376b385

--- a/index.yaml
+++ b/index.yaml
@@ -667,6 +667,12 @@ indexes:
   - name: google_user_id
   - name: google_display_name
 
+- kind: CustomField
+  properties:
+  - name: organization
+  - name: related_object
+  - name: order
+
 - kind: _AE_Pipeline_Record
   properties:
   - name: class_path
