upgrade opportunity stage for the early stage users
Former-commit-id: 287c3e69d8901c9dd7983d64e9d15a50b82f8473 [formerly 0ba753b792360b48c2cbddfbe84c6065f3a4fc6e] [formerly a67aeb13365a6fa3c458a403c02a90600fc9780b [formerly 5464dd282683a2653550eba74d32d98759f6b54d]]
Former-commit-id: 8204b0a332b2d8b8da078eaac929492378c09de7 [formerly cbac973376ea798ee3b5751953856eda067054b7]
Former-commit-id: 55c3009201f50ae6204b5833a0ef761c9ac2ac5b

--- a/mapreduce.yaml
+++ b/mapreduce.yaml
@@ -6,6 +6,13 @@ mapreduce:
     params:
     - name: entity_kind
       default: model.Organization
+- name: upgrade of Opportunity stage
+  mapper:
+    input_reader: mapreduce.input_readers.DatastoreInputReader
+    handler: myModel.upgrade_oppo_stage
+    params:
+    - name: entity_kind
+      default: model.Organization
 - name: parcour of lead
   mapper:
     input_reader: mapreduce.input_readers.DatastoreInputReader
