rename admin app from admin console to settings
Former-commit-id: e2b71d807984de07289b3f4148be74f2ce6c8fc9 [formerly 06d2a35fd9b81d189124e560e7d9d834ff2e27c8] [formerly 46b724c349c10bba7b878fe6ec590d0d16f79f93 [formerly 3d984027de7b479f6132d2c0575765e09d67aa4f]]
Former-commit-id: b0bc3f6f325cb186673bcbc462a5ce9a1b32d12a [formerly 1ad66930f59e228b7cd5de4bd4fa1d8036afaf6b]
Former-commit-id: ecf6de41f190daf5de5fda7e006b4778de4df271

--- a/mapreduce.yaml
+++ b/mapreduce.yaml
@@ -158,3 +158,11 @@ mapreduce:
     params:
     - name: entity_kind
       default: model.Application
+
+- name: update_admin_tab_name
+  mapper:
+    input_reader: mapreduce.input_readers.DatastoreInputReader
+    handler: myModel.update_admin_tab_name
+    params:
+    - name: entity_kind
+      default: model.Application
